--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -36,7 +36,7 @@ body {
   );
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#1e46a3",endColorstr="#c12a23",GradientType=1);
 
-  height: 100vh;
+  min-height: 100vh;
   color: #fff;
   display: flex;
   align-items: center;
@@ -44,10 +44,12 @@ body {
 }
 
 main {
+  max-height: 100%;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  padding: 30px 10px;
 }
 
 main div.tittle {
@@ -70,10 +72,11 @@ main div.movie {
   display: flex;
   gap: 34px;
   margin-bottom: 20px;
+  padding: 10px;
 }
 
 main div.movie img {
-  max-height: 250px;
+  max-height: 400px;
 }
 
 main div.movie h2 {
@@ -105,6 +108,12 @@ main div.find-movie button {
   font-weight: 700;
   margin-bottom: 26px;
   border-radius: 5px;
+  color: #000;
+}
+
+main div.find-movie button:hover {
+  background: #7a7978;
+  transition: 0.5s;
 }
 
 main div.find-movie button img {
@@ -114,4 +123,19 @@ main div.find-movie button img {
 main div.find-movie p {
   max-width: 43ch;
   text-align: center;
+  font-size: 14px;
+  font-weight: 400;
+}
+
+@media (max-width: 600px) {
+  main div.movie {
+    flex-direction: column;
+    gap: 34px;
+    margin-bottom: 20px;
+    padding: 10px;
+  }
+
+  main div.movie img {
+    align-self: center;
+  }
 }
